

//修真界面请求
message PBMsgXiuzhenInfoRequest
{
	
};

//修真界面回复
message PBMsgXiuzhenInfoResponse
{
	
	optional sint32		ret_code	= 1;	// 返回值;
	
};

message PBMsgXiuzhenInfoNotice
{
    repeated PBXiuzhenmaiItem	mai_item_list	= 1;    //不定长的经脉
	optional uint32		total_battle_score	= 2;	// 总战力;
}

//修真升级请求
message PBMsgXiuzhenUpgradeRequest
{
    optional uint32 mai_id			= 1;	// 左脉或者右脉;	
	optional uint32 chong_id		= 2;	// 几重;	
	optional uint32 xue_id			= 3;	// 穴位;
};

//修真升级回复
message PBMsgXiuzhenUpgradeResponse
{
	optional sint32		ret_code	    = 1;	// 返回值;
	optional uint32     mai_id			= 2;	// 左脉或者右脉;
	optional uint32     chong_id		= 3;	// 几重;
	optional uint32     xue_id			= 4;	// 穴位;
	optional uint32     cur_pin			= 5;	// 当前位置的品级;
	optional uint32		total_battle_score  = 6;	// 总战力;
	optional float		multiple			= 7;	// 倍数;
	optional uint32     cur_exp			= 8;	// 当前经验;
};

message PBxueItem
{
    optional uint32     xue_id			= 1;	// 穴位ID;
	optional uint32     cur_pin			= 2;	// 当前穴位的品级;
	optional uint32     cur_exp			= 3;	// 当前经验;
}


message PBXiuzhenchongItem
{
    optional  uint32      chong_id			= 1;	//页数ID;
	repeated  PBxueItem   xue_item_list     = 2;	//不定长的穴位
	
};


message PBXiuzhenmaiItem
{
	optional  uint32      mai_id			= 1;	//脉数ID;
	repeated  PBXiuzhenchongItem   chong_item_list =   2;	//不定长的页数
};